--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/nanoid": "^2.1.0",
     "@types/node": "^10.14.4",
     "axios": "^0.19.2",
+    "bundlewatch": "^0.2.7",
     "console-testing-library": "^0.3.1",
     "eslint-config-react-app": "^5.0.1",
     "invariant": "^2.2.4",
@@ -48,7 +49,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/**/*.ts\" \"docs/*/**.md\"",
     "lint": "tsdx lint src",
-    "prepare": "npm run lint && npm run format:check && npm test && npm run build-ci",
+    "bundlewatch": "bundlewatch || true",
+    "prepare": "npm run lint && npm run format:check && npm test && npm run build-ci && npm run bundlewatch",
     "test": "tsdx test"
   },
   "files": [
@@ -74,5 +76,21 @@
         }
       }
     }
+  },
+  "bundlewatch": {
+    "files": [
+      {
+        "path": "dist/redux-toolkit.cjs.production.min.js",
+        "maxSize": "15kB"
+      },
+      {
+        "path": "dist/redux-toolkit.umd.min.js",
+        "maxSize": "32kB"
+      },
+      {
+        "path": "dist/redux-toolkit.esm.js",
+        "maxSize": "90kB"
+      }
+    ]
   }
 }
