--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js: node
 env:
   - TYPESCRIPT_VERSION=rc
+  - TYPESCRIPT_VERSION=beta
+  - TYPESCRIPT_VERSION=3.9
   - TYPESCRIPT_VERSION=3.8
   - TYPESCRIPT_VERSION=3.7
   - TYPESCRIPT_VERSION=3.6
