--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/**/*.ts\" \"docs/*/**.md\"",
     "lint": "tsdx lint src",
-    "prepare": "npm run lint && npm run format:check && npm test && npm run build-ci",
+    "prepare": "echo TODO DISABLED npm run lint && npm run format:check && npm test && npm run build-ci",
     "test": "tsdx test"
   },
   "files": [
