chore. add TS 4.0 to testing matrix, fix a test

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js: node
 env:
-  - TYPESCRIPT_VERSION=rc
+  - TYPESCRIPT_VERSION=next
+  - TYPESCRIPT_VERSION=4.0
+  - TYPESCRIPT_VERSION=3.9
   - TYPESCRIPT_VERSION=3.8
   - TYPESCRIPT_VERSION=3.7
   - TYPESCRIPT_VERSION=3.6
