--- a/website/package.json
+++ b/website/package.json
@@ -9,9 +9,13 @@
   "dependencies": {
     "@docusaurus/core": "^2.0.0-alpha.58",
     "@docusaurus/preset-classic": "^2.0.0-alpha.58",
+    "@types/node": "^14.6.0",
     "classnames": "^2.2.6",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "typescript": "^2.8.4",
+    "unist-util-flatmap": "^1.0.0",
+    "virtual-tsc": "^0.6.1"
   },
   "browserslist": {
     "production": [
