use LanguageService instance to speed up subsequent compilations

--- a/website/src/transpileCodeblocks/tsconfig.json
+++ b/website/src/transpileCodeblocks/tsconfig.json
@@ -11,6 +11,8 @@
     "strict": true,
     "removeComments": false,
     "module": "ESNext",
-    "target": "ESNext"
+    "target": "ESNext",
+    "allowJs": true,
+    "checkJs": true
   }
 }
