--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.2.6",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "typescript": "^4.0.2",
     "unist-util-flatmap": "^1.0.0"
   },
   "browserslist": {
