--- a/docs/package.json
+++ b/docs/package.json
@@ -5,6 +5,7 @@
     "@types/react": "^16.9.46",
     "@types/react-redux": "^7.1.9",
     "@types/redux-logger": "^3.0.8",
+    "axios": "^0.20.0",
     "formik": "^2.1.5",
     "rxjs": "^6.6.2"
   }
