--- a/docs/package.json
+++ b/docs/package.json
@@ -7,6 +7,7 @@
     "@types/redux-logger": "^3.0.8",
     "axios": "^0.20.0",
     "formik": "^2.1.5",
+    "nanoid": "^3.1.12",
     "rxjs": "^6.6.2"
   }
 }
