--- a/docs/package.json
+++ b/docs/package.json
@@ -2,12 +2,12 @@
   "name": "docs",
   "devDependencies": {
     "@manaflair/redux-batch": "^1.0.0",
+    "@types/nanoid": "^2.1.0",
     "@types/react": "^16.9.46",
     "@types/react-redux": "^7.1.9",
     "@types/redux-logger": "^3.0.8",
     "axios": "^0.20.0",
     "formik": "^2.1.5",
-    "nanoid": "^3.1.12",
     "rxjs": "^6.6.2"
   }
 }
