extract post-processing, add prettier

--- a/website/package.json
+++ b/website/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@docusaurus/core": "^2.0.0-alpha.58",
     "@docusaurus/preset-classic": "^2.0.0-alpha.58",
+    "@types/prettier": "^2.1.0",
     "classnames": "^2.2.6",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
