--- a/website/src/transpileCodeblocks/tsconfig.json
+++ b/website/src/transpileCodeblocks/tsconfig.json
@@ -13,6 +13,7 @@
     "module": "ESNext",
     "target": "ESNext",
     "allowJs": true,
-    "checkJs": true
+    "checkJs": true,
+    "alwaysStrict": false
   }
 }
