--- a/website/package.json
+++ b/website/package.json
@@ -12,6 +12,7 @@
     "@docusaurus/preset-classic": "^2.0.0-alpha.58",
     "@types/prettier": "^2.1.0",
     "classnames": "^2.2.6",
+    "prettier": "^2.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "typescript": "^4.0.2",
