--- a/docs/package.json
+++ b/docs/package.json
@@ -8,6 +8,7 @@
     "@types/redux-logger": "^3.0.8",
     "axios": "^0.20.0",
     "formik": "^2.1.5",
+    "immutable": "^3.8.2",
     "rxjs": "^6.6.2"
   }
 }
