--- a/website/package.json
+++ b/website/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@docusaurus/core": "^2.0.0-alpha.58",
     "@docusaurus/preset-classic": "^2.0.0-alpha.58",
+    "@microsoft/tsdoc": "^0.12.20",
     "@types/prettier": "^2.1.0",
     "classnames": "^2.2.6",
+    "mdast-builder": "^1.1.1",
     "prettier": "^2.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
