--- a/website/package.json
+++ b/website/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "start": "docusaurus start",
     "build": "docusaurus build",
+    "netlify-build": "(cd ..; npm install --ignore-scripts --production; cd docs; npm install --ignore-scripts ); npm run build",
     "swizzle": "docusaurus swizzle",
     "publish-gh-pages": "docusaurus deploy",
     "deploy": "docusaurus deploy"
@@ -11,7 +12,9 @@
     "@docusaurus/preset-classic": "^2.0.0-alpha.64",
     "classnames": "^2.2.6",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "remark-typescript-tools": "^1.0.3",
+    "typescript": "^4.0.2"
   },
   "browserslist": {
     "production": [
