--- a/package.json
+++ b/package.json
@@ -47,10 +47,19 @@
   "devDependencies": {
     "@reduxjs/toolkit": "^1.4.0",
     "@size-limit/preset-small-lib": "^4.6.0",
+    "@testing-library/react": "^11.1.0",
     "husky": "^4.3.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-redux": "^7.2.1",
     "size-limit": "^4.6.0",
+    "ts-node": "^9.0.0",
     "tsdx": "^0.14.1",
-    "tslib": "^2.0.3",
-    "typescript": "^4.0.3"
+    "tslib": "^2.0.3"
+  },
+  "resolutions": {
+    "typescript": "^4.0.3",
+    "prettier": "2.1.2",
+    "@typescript-eslint/parser": "4.4.1"
   }
 }
