--- a/package.json
+++ b/package.json
@@ -48,10 +48,13 @@
     "@reduxjs/toolkit": "^1.4.0",
     "@size-limit/preset-small-lib": "^4.6.0",
     "@testing-library/react": "^11.1.0",
+    "@testing-library/react-hooks": "^3.4.2",
+    "@types/react-redux": "^7.1.9",
     "husky": "^4.3.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.1",
+    "react-test-renderer": "^17.0.1",
     "size-limit": "^4.6.0",
     "ts-node": "^9.0.0",
     "tsdx": "^0.14.1",
