--- a/website/package.json
+++ b/website/package.json
@@ -8,7 +8,8 @@
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
-    "serve": "docusaurus serve"
+    "serve": "docusaurus serve",
+    "netlify-build": "(cd ..; npm install --ignore-scripts --production; cd docs; npm install --ignore-scripts ); npm run build"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-alpha.66",
