--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "rollup-plugin-strip-code": "^0.2.6",
     "tsdx": "^0.11.0",
     "tslib": "^1.10.0",
-    "typescript": "^3.8.2",
+    "typescript": "^3.9.7",
     "typings-tester": "^0.3.2"
   },
   "scripts": {
@@ -50,8 +50,9 @@
     "format": "prettier --write \"src/**/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/**/*.ts\" \"docs/*/**.md\"",
     "lint": "tsdx lint src",
-    "prepare": "npm run lint && npm run format:check && npm test && npm run build-ci",
-    "test": "tsdx test"
+    "prepare": "npm run lint && npm run format:check && npm test && npm run type-tests && npm run build-ci",
+    "test": "tsdx test",
+    "type-tests": "cd type-tests/files && tsc"
   },
   "files": [
     "dist/*.js",
