--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
   "size-limit": [
     {
       "path": "dist/rtk-query.cjs.production.min.js",
-      "limit": "20 KB"
+      "limit": "25 KB"
     },
     {
       "path": "dist/rtk-query.esm.js",
-      "limit": "20 KB"
+      "limit": "25 KB"
     }
   ],
   "peerDependencies": {
@@ -85,6 +85,7 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "https://pkg.csb.dev/reduxjs/redux-toolkit/commit/2c869f4d/@reduxjs/toolkit",
+    "immer": "^8.0.0",
     "@size-limit/preset-small-lib": "^4.6.0",
     "@testing-library/react": "^11.1.0",
     "@testing-library/react-hooks": "^3.4.2",
@@ -106,6 +107,7 @@
     "@babel/core": "7.12.3",
     "typescript": "4.1.1-rc",
     "@typescript-eslint/parser": "4.7.0",
-    "prettier": "prettier/prettier"
+    "prettier": "prettier/prettier",
+    "immer": "^8.0.0"
   }
 }
