--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "@types/react-redux": "^7.1.9",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
-    "prettier": "prettier/prettier",
+    "prettier": "^2.2.0",
     "react": "^16.14.0 || 17.0.0",
     "react-dom": "^16.14.0 || 17.0.0",
     "react-redux": "^7.2.1",
@@ -104,10 +104,9 @@
     "tslib": "^2.0.3"
   },
   "resolutions": {
-    "@babel/core": "7.12.3",
-    "typescript": "4.1.1-rc",
+    "typescript": "4.1.2",
     "@typescript-eslint/parser": "4.7.0",
-    "prettier": "prettier/prettier",
+    "prettier": "^2.2.0",
     "immer": "^8.0.0"
   }
 }
