--- a/package.json
+++ b/package.json
@@ -94,6 +94,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
     "immer": "^8.0.0",
+    "msw": "^0.22.3",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.2.0",
     "react": "^16.14.0 || 17.0.0",
     "react-dom": "^16.14.0 || 17.0.0",
@@ -103,7 +105,8 @@
     "ts-node": "^9.0.0",
     "ts-unused-exports": "^7.0.0",
     "tsdx": "^0.14.1",
-    "tslib": "^2.0.3"
+    "tslib": "^2.0.3",
+    "whatwg-fetch": "^3.5.0"
   },
   "resolutions": {
     "typescript": "4.1.2",
