--- a/package.json
+++ b/package.json
@@ -40,18 +40,19 @@
     "rollup-plugin-strip-code": "^0.2.6",
     "tsdx": "^0.11.0",
     "tslib": "^1.10.0",
-    "typescript": "^3.8.2",
+    "typescript": "^3.9.7",
     "typings-tester": "^0.3.2"
   },
   "scripts": {
-    "build-ci": "tsdx build --format cjs,esm,umd --name redux-toolkit && api-extractor run",
-    "build": "tsdx build --format cjs,esm,umd --name redux-toolkit && api-extractor run --local",
-    "dev": "tsdx watch  --format cjs,esm,umd",
+    "build-ci": "tsdx build --format cjs,esm,system,umd --name redux-toolkit && api-extractor run",
+    "build": "tsdx build --format cjs,esm,system,umd --name redux-toolkit && api-extractor run --local",
+    "dev": "tsdx watch  --format cjs,esm,system,umd",
     "format": "prettier --write \"src/**/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/**/*.ts\" \"docs/*/**.md\"",
     "lint": "tsdx lint src",
-    "prepare": "npm run lint && npm run format:check && npm test && npm run build-ci",
-    "test": "tsdx test"
+    "prepare": "npm run lint && npm run format:check && npm test && npm run type-tests && npm run build-ci",
+    "test": "tsdx test",
+    "type-tests": "cd type-tests/files && tsc"
   },
   "files": [
     "dist/*.js",
@@ -60,7 +61,7 @@
     "src"
   ],
   "dependencies": {
-    "immer": "^7.0.3",
+    "immer": "^8.0.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
