Rework build/setup process to work better across platforms
- Updated `build` and `prepare` commands to not call shell scripts
- Replaced `typesversions.sh` with a JS file using `shelljs`
- Moved `prepareExamples` call to a separate run script

--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
   },
   "scripts": {
     "start": "tsdx watch",
-    "build": "tsdx build && ./typesversions.sh",
+    "build": "tsdx build && node typesversions.js",
     "test": "tsdx test",
     "lint": "tsdx lint",
-    "prepare": "yarn build; ./prepare-examples.sh",
+    "prepare": "yarn build",
+    "prepareExamples": "./prepare-examples.sh",
     "size": "size-limit",
     "format": "prettier --write \"src/**/*.ts\" \"**/*.md\"",
     "analyze": "size-limit --why",
@@ -103,6 +104,7 @@
     "react-dom": "^16.14.0 || 17.0.0",
     "react-redux": "^7.2.1",
     "react-test-renderer": "^17.0.1",
+    "shelljs": "^0.8.4",
     "size-limit": "^4.6.0",
     "ts-node": "^9.0.0",
     "ts-unused-exports": "^7.0.0",
