--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     }
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "@size-limit/preset-small-lib": "^4.6.0",
     "@testing-library/react": "^11.1.0",
     "@testing-library/react-hooks": "^3.4.2",
