--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@testing-library/react-hooks": "^3.4.2",
     "@testing-library/user-event": "^12.2.2",
     "@types/react-redux": "^7.1.9",
+    "axios": "^0.21.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
     "msw": "^0.22.3",
