--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@rtk-incubator/rtk-query",
   "version": "0.0.1",
   "license": "MIT",
+  "public": true,
   "author": "Lenz Weber",
   "main": "dist/index.js",
   "module": "dist/rtk-query.esm.js",
