--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rtk-incubator/rtk-query",
-  "version": "0.0.1",
+  "version": "0.1.0-alpha.0",
   "license": "MIT",
   "public": true,
   "author": "Lenz Weber",
