--- a/package.json
+++ b/package.json
@@ -4,15 +4,25 @@
   "main": "index.js",
   "author": "Lenz Weber",
   "license": "MIT",
+  "bin": {
+    "generate-rtk": "./lib/bin/cli.js"
+  },
+  "scripts": {
+    "build": "tsc",
+    "prepare": "npm run build && chmod +x ./lib/bin/cli.js"
+  },
   "devDependencies": {
     "@rtk-incubator/rtk-query": "^0.1.0",
+    "@types/commander": "^2.12.2",
+    "@types/lodash": "^4.14.165",
+    "@types/node": "^14.14.12",
     "oazapfts": "file:.yalc/oazapfts",
     "ts-node": "^9.1.0",
     "yalc": "^1.0.0-pre.47"
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.0.2",
-    "@types/lodash": "^4.14.165",
+    "commander": "^6.2.0",
     "swagger2openapi": "^7.0.4",
     "ts-morph": "^9.1.0",
     "typescript": "^4.1.2"
