--- a/package.json
+++ b/package.json
@@ -12,17 +12,29 @@
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build && chmod +x ./lib/bin/cli.js",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "test:update": "lib/bin/cli.js test/fixtures/petstore.json --file test/fixtures/generated.ts -h",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "@rtk-incubator/rtk-query": "^0.2.0",
     "@types/commander": "^2.12.2",
+    "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.12",
     "@types/prettier": "^2.1.6",
+    "babel-jest": "^26.6.3",
+    "chalk": "^4.1.0",
+    "del": "^6.0.0",
     "husky": "^4.3.6",
+    "jest": "^26.6.3",
+    "msw": "^0.25.0",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.1.0",
     "yalc": "^1.0.0-pre.47"
   },
