--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rtk-incubator/rtk-query-codegen-openapi",
-  "version": "0.2.0",
+  "version": "0.2.1-0",
   "main": "index.js",
   "author": "Lenz Weber",
   "license": "MIT",
