--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "test:update": "lib/bin/cli.js test/fixtures/petstore.json --file test/fixtures/generated.ts -h",
     "test": "jest"
   },
+  "files": [
+    "lib",
+    "src"
+  ],
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
