--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base    = "website"
   publish = "build"
-  command = "npm run netlify-build"
+  command = "npm run netlify-build  && cp _redirects ./build"
   ignore = "git diff --quiet HEAD^ HEAD docs website"
 
 [build.environment]
