--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "license": "MIT",
   "devDependencies": {
     "@microsoft/api-extractor": "^7.7.0",
+    "@types/benchmark": "^2.1.0",
+    "@types/faker": "^5.1.7",
     "@types/jest": "^24.0.11",
     "@types/json-stringify-safe": "^5.0.0",
     "@types/nanoid": "^2.1.0",
@@ -31,6 +33,7 @@
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "axios": "^0.19.2",
+    "benchmark": "^2.1.4",
     "console-testing-library": "^0.3.1",
     "eslint-config-react-app": "^5.0.1",
     "invariant": "^2.2.4",
@@ -38,6 +41,7 @@
     "prettier": "^1.19.1",
     "react": "^16.8.6",
     "rollup-plugin-strip-code": "^0.2.6",
+    "ts-node": "^9.1.1",
     "tsdx": "^0.11.0",
     "tslib": "^1.10.0",
     "typescript": "^3.9.7",
@@ -50,7 +54,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/**/*.ts\" \"docs/*/**.md\"",
     "lint": "tsdx lint src",
-    "prepare": "npm run lint && npm run format:check && npm test && npm run type-tests && npm run build-ci",
+    "prepare": "npm run build-ci",
     "test": "tsdx test",
     "type-tests": "cd type-tests/files && tsc"
   },
@@ -61,6 +65,7 @@
     "src"
   ],
   "dependencies": {
+    "faker": "^5.4.0",
     "immer": "^8.0.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
