--- a/package.json
+++ b/package.json
@@ -24,23 +24,32 @@
   "license": "MIT",
   "devDependencies": {
     "@microsoft/api-extractor": "^7.7.0",
+    
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-replace": "^2.3.4",
+    "@rollup/plugin-typescript": "^8.0.0",
     "@types/jest": "^24.0.11",
     "@types/json-stringify-safe": "^5.0.0",
     "@types/nanoid": "^2.1.0",
     "@types/node": "^10.14.4",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.9.1",
+    "@typescript-eslint/parser": "4.7.0",
     "axios": "^0.19.2",
     "console-testing-library": "^0.3.1",
     "eslint-config-react-app": "^5.0.1",
     "invariant": "^2.2.4",
-    "json-stringify-safe": "^5.0.1",
-    "prettier": "^1.19.1",
+    "jest": "^26.6.3",
+    "json-stringify-safe": "^5.0.1",    
+    "prettier": "^2.2.0",
     "react": "^16.8.6",
+    "rollup": "^2.34.2",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-strip-code": "^0.2.6",
-    "tsdx": "^0.14.1",
-    "tslib": "^1.10.0",
-    "typescript": "^3.9.7",
+    "tsdx": "^0.14.1",    
+    "tslib": "^2.0.3",    
+    "ts-jest": "^26.4.4",
+    "typescript": "4.1.2",
     "typings-tester": "^0.3.2"
   },
   "scripts": {
