--- a/package.json
+++ b/package.json
@@ -23,9 +23,8 @@
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
   "license": "MIT",
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.7.0",
-    
     "@babel/plugin-transform-runtime": "^7.12.10",
+    "@microsoft/api-extractor": "^7.7.0",
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-replace": "^2.3.4",
     "@rollup/plugin-typescript": "^8.0.0",
@@ -40,21 +39,22 @@
     "eslint-config-react-app": "^5.0.1",
     "invariant": "^2.2.4",
     "jest": "^26.6.3",
-    "json-stringify-safe": "^5.0.1",    
+    "json-stringify-safe": "^5.0.1",
     "prettier": "^2.2.0",
     "react": "^16.8.6",
     "rollup": "^2.34.2",
-    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-clean": "^1.0.0",
     "rollup-plugin-strip-code": "^0.2.6",
-    "tsdx": "^0.14.1",    
-    "tslib": "^2.0.3",    
+    "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^26.4.4",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.0.3",
     "typescript": "4.1.2",
     "typings-tester": "^0.3.2"
   },
   "scripts": {
     "build-ci": "tsdx build --format cjs,esm,system,umd --name redux-toolkit && api-extractor run",
-    "build": "tsdx build --format cjs,esm,system,umd --name redux-toolkit && api-extractor run --local",
+    "build": "rollup -c && api-extractor run --local",
     "dev": "tsdx watch  --format cjs,esm,system,umd",
     "format": "prettier --write \"src/**/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/**/*.ts\" \"docs/*/**.md\"",
