--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@reduxjs/toolkit",
   "version": "1.5.1",
   "description": "The official, opinionated, batteries-included toolset for efficient Redux development",
-  "repository": "https://github.com/reduxjs/redux-toolkit",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/reduxjs/redux-toolkit.git"
+  },
   "keywords": [
     "redux",
     "react",
@@ -32,9 +35,14 @@
     "@typescript-eslint/parser": "^3.9.1",
     "axios": "^0.19.2",
     "console-testing-library": "^0.3.1",
+    "convert-source-map": "^1.7.0",
+    "esbuild": "0.8.57",
     "eslint-config-react-app": "^5.0.1",
+    "fs-extra": "^9.1.0",
     "invariant": "^2.2.4",
     "json-stringify-safe": "^5.0.1",
+    "magic-string": "^0.25.7",
+    "merge-source-map": "^1.1.0",
     "prettier": "^1.19.1",
     "react": "^16.8.6",
     "rollup-plugin-strip-code": "^0.2.6",
@@ -46,6 +54,7 @@
   "scripts": {
     "build-ci": "tsdx build --format cjs,esm,system,umd --name redux-toolkit && api-extractor run",
     "build": "tsdx build --format cjs,esm,system,umd --name redux-toolkit && api-extractor run --local",
+    "bundle": "node scripts/build.js && tsc  && api-extractor run --local",
     "dev": "tsdx watch  --format cjs,esm,system,umd",
     "format": "prettier --write \"src/**/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/**/*.ts\" \"docs/*/**.md\"",
@@ -58,7 +67,8 @@
     "dist/*.js",
     "dist/*.js.map",
     "dist/typings.d.ts",
-    "src"
+    "src",
+    "query"
   ],
   "dependencies": {
     "immer": "^8.0.1",
@@ -77,5 +87,13 @@
         }
       }
     }
+  },
+  "bugs": {
+    "url": "https://github.com/reduxjs/redux-toolkit/issues"
+  },
+  "homepage": "https://github.com/reduxjs/redux-toolkit#readme",
+  "directories": {
+    "doc": "docs",
+    "example": "example"
   }
 }
