--- a/src/query/package.json
+++ b/src/query/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "files": [
+    "query",
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
