Initial work on using esbuild

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "outDir": "dist",
+    "emitDeclarationOnly": true,
     "strict": true,
     "target": "es2018"
   },
