--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@typescript-eslint/parser": "^3.9.1",
     "axios": "^0.19.2",
     "console-testing-library": "^0.3.1",
+    "esbuild": "^0.11.2",
     "eslint-config-react-app": "^5.0.1",
     "invariant": "^2.2.4",
     "json-stringify-safe": "^5.0.1",
