--- a/package.json
+++ b/package.json
@@ -34,21 +34,27 @@
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "axios": "^0.19.2",
+    "babel-jest": "^26.6.3",
     "console-testing-library": "^0.3.1",
     "convert-source-map": "^1.7.0",
     "esbuild": "0.8.57",
+    "eslint": "^7.23.0",
     "eslint-config-react-app": "^5.0.1",
     "fs-extra": "^9.1.0",
     "invariant": "^2.2.4",
+    "jest": "^26.6.3",
+    "jest-watch-typeahead": "^0.6.1",
     "json-stringify-safe": "^5.0.1",
     "magic-string": "^0.25.7",
     "merge-source-map": "^1.1.0",
-    "prettier": "^1.19.1",
+    "prettier": "^2.2.1",
     "react": "^16.8.6",
+    "rollup": "^2.44.0",
     "rollup-plugin-strip-code": "^0.2.6",
-    "tsdx": "^0.11.0",
+    "terser": "^5.6.1",
+    "ts-jest": "^26.5.4",
     "tslib": "^1.10.0",
-    "typescript": "^3.9.7",
+    "typescript": "^4.2.3",
     "typings-tester": "^0.3.2"
   },
   "scripts": {
@@ -74,8 +80,7 @@
     "immer": "^8.0.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0",
-    "terser": "^5.6.1"
+    "reselect": "^4.0.0"
   },
   "sideEffects": false,
   "jest": {
