--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "format:check": "prettier --list-different \"src/**/*.ts\" \"docs/*/**.md\"",
     "lint": "tsdx lint src",
     "prepare": "npm run lint && npm run format:check && npm test && npm run type-tests && npm run build-ci",
-    "test": "tsdx test",
+    "test": "jest",
     "type-tests": "cd type-tests/files && tsc"
   },
   "files": [
@@ -83,17 +83,6 @@
     "reselect": "^4.0.0"
   },
   "sideEffects": false,
-  "jest": {
-    "globals": {
-      "ts-jest": {
-        "diagnostics": {
-          "ignoreCodes": [
-            6133
-          ]
-        }
-      }
-    }
-  },
   "bugs": {
     "url": "https://github.com/reduxjs/redux-toolkit/issues"
   },
