--- a/src/query/package.json
+++ b/src/query/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "files": [
-    "query",
+    "query"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
