--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,7 +40,7 @@ jobs:
       fail-fast: false
       matrix:
         node: ['14.x']
-        ts: ['3.5', '3.6', '3.7', '3.8', '3.9', '4.0', '4.1', 'next']
+        ts: ['3.8', '3.9', '4.0', '4.1', 'next']
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
