--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ['12.x']
+        node: ['14.x']
 
     steps:
       - name: Checkout repo
@@ -39,8 +39,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: ['12.x']
-        ts: ['3.5', '3.6', '3.7', '3.8', '3.9', '4.0', '4.1', 'next']
+        node: ['14.x']
+        ts: ['3.8', '3.9', '4.0', '4.1', 'next']
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
