--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@reduxjs/toolkit",
   "version": "1.5.1",
   "description": "The official, opinionated, batteries-included toolset for efficient Redux development",
-  "repository": "https://github.com/reduxjs/redux-toolkit",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/reduxjs/redux-toolkit.git"
+  },
   "keywords": [
     "redux",
     "react",
@@ -23,7 +26,7 @@
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
   "license": "MIT",
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.7.0",
+    "@microsoft/api-extractor": "^7.13.2",
     "@types/jest": "^24.0.11",
     "@types/json-stringify-safe": "^5.0.0",
     "@types/nanoid": "^2.1.0",
@@ -32,20 +35,26 @@
     "@typescript-eslint/parser": "^3.9.1",
     "axios": "^0.19.2",
     "console-testing-library": "^0.3.1",
+    "convert-source-map": "^1.7.0",
+    "esbuild": "0.8.57",
     "eslint-config-react-app": "^5.0.1",
+    "fs-extra": "^9.1.0",
     "invariant": "^2.2.4",
     "json-stringify-safe": "^5.0.1",
-    "prettier": "^1.19.1",
+    "magic-string": "^0.25.7",
+    "merge-source-map": "^1.1.0",
+    "prettier": "^2.2.1",
     "react": "^16.8.6",
     "rollup-plugin-strip-code": "^0.2.6",
-    "tsdx": "^0.11.0",
+    "terser": "^5.6.1",
+    "tsdx": "^0.14.1",
     "tslib": "^1.10.0",
     "typescript": "^3.9.7",
     "typings-tester": "^0.3.2"
   },
   "scripts": {
-    "build-ci": "tsdx build --format cjs,esm,system,umd --name redux-toolkit && api-extractor run",
-    "build": "tsdx build --format cjs,esm,system,umd --name redux-toolkit && api-extractor run --local",
+    "build-ci": "node scripts/build.js && tsc && tsc -p src/query/tsconfig.json && api-extractor run",
+    "build": "node scripts/build.js && tsc && tsc -p src/query/tsconfig.json   && api-extractor run --local",
     "dev": "tsdx watch  --format cjs,esm,system,umd",
     "format": "prettier --write \"src/**/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/**/*.ts\" \"docs/*/**.md\"",
@@ -58,7 +67,8 @@
     "dist/*.js",
     "dist/*.js.map",
     "dist/typings.d.ts",
-    "src"
+    "src",
+    "query"
   ],
   "dependencies": {
     "immer": "^8.0.1",
@@ -77,5 +87,13 @@
         }
       }
     }
+  },
+  "bugs": {
+    "url": "https://github.com/reduxjs/redux-toolkit/issues"
+  },
+  "homepage": "https://github.com/reduxjs/redux-toolkit#readme",
+  "directories": {
+    "doc": "docs",
+    "example": "example"
   }
 }
