--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
   ],
   "dependencies": {
     "immer": "^9.0.1",
-    "redux": "^4.0.0",
+    "redux": "^4.1.0-alpha.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
