--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reduxjs/toolkit",
-  "version": "1.5.1",
+  "version": "1.6.0-alpha.0",
   "description": "The official, opinionated, batteries-included toolset for efficient Redux development",
   "repository": {
     "type": "git",
