--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rtk-incubator/rtk-query",
   "repository": "https://github.com/rtk-incubator/rtk-query",
-  "version": "0.3.0-alpha.0",
+  "version": "0.3.0",
   "license": "MIT",
   "public": true,
   "author": "Lenz Weber",
