--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-redux": "^7.1.16",
+    "@types/yargs": "^16.0.1",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "axios": "^0.19.2",
@@ -55,7 +56,8 @@
     "tsdx": "^0.14.1",
     "tslib": "^1.10.0",
     "typescript": "^4.2.3",
-    "typings-tester": "^0.3.2"
+    "typings-tester": "^0.3.2",
+    "yargs": "^15.3.1"
   },
   "scripts": {
     "build-ci": "node scripts/cli.js && tsc && tsc -p src/query/tsconfig.json && api-extractor run",
