Implement API Extractor for query entry points
- Dropped combined typedefs file
- Switched to calling API Extractor inside the build script
- Switched to running TSC once, first, for all source
- Fixed output of index.js files for CJS

--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
   },
   "scripts": {
     "build-ci": "node scripts/cli.js && tsc && tsc -p src/query/tsconfig.json && api-extractor run",
-    "build": "node scripts/cli.js && tsc && tsc -p src/query/tsconfig.json && api-extractor run --local",
+    "build:original": "node scripts/cli.js && tsc && tsc -p src/query/tsconfig.json && api-extractor run --local",
+    "build": "rimraf dist && tsc && node scripts/cli.js --local",
     "dev": "tsdx watch  --format cjs,esm,system,umd",
     "format": "prettier --write \"src/**/*.{ts,tsx}\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/**/*.{ts,tsx}\" \"docs/*/**.md\"",
