Hack in TS support for nested exports via `typesVersions`
Ref: https://github.com/microsoft/TypeScript/issues/33079#issuecomment-702617758

--- a/package.json
+++ b/package.json
@@ -40,6 +40,12 @@
       "default": "./dist/query/react/index.js"
     }
   },
+  "typesVersions": {
+    "*": {
+      "query": ["./dist/query/index.d.ts"],
+      "query/react": ["./dist/query/react.d.ts"]
+    }
+  },
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
   "license": "MIT",
   "devDependencies": {
