Output RTKQ files to ./query to work in Webpack 4

--- a/package.json
+++ b/package.json
@@ -30,20 +30,20 @@
       "default": "./dist/index.js"
     },
     "./query": {
-      "types": "./dist/query/index.d.ts",
-      "module": "./dist/query/rtk-query.esm.js",
-      "default": "./dist/query/index.js"
+      "types": "./query/index.d.ts",
+      "module": "./query/rtk-query.esm.js",
+      "default": "./query/index.js"
     },
     "./query/react": {
-      "types": "./dist/query/react.d.ts",
-      "module": "./dist/query/react/rtk-query-react.esm.js",
-      "default": "./dist/query/react/index.js"
+      "types": "./query/react.d.ts",
+      "module": "./query/react/rtk-query-react.esm.js",
+      "default": "./query/react/index.js"
     }
   },
   "typesVersions": {
     "*": {
-      "query": ["./dist/query/index.d.ts"],
-      "query/react": ["./dist/query/react.d.ts"]
+      "query": ["./query/index.d.ts"],
+      "query/react": ["./query/react.d.ts"]
     }
   },
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
@@ -83,8 +83,8 @@
     "yargs": "^15.3.1"
   },
   "scripts": {
-    "build-ci": "rimraf dist && tsc && node scripts/cli.js",
-    "build": "rimraf dist && tsc && node scripts/cli.js --local",
+    "build-ci": "rimraf dist query && tsc && node scripts/cli.js",
+    "build": "rimraf dist query && tsc && node scripts/cli.js --skipExtraction",
     "dev": "tsdx watch  --format cjs,esm,system,umd",
     "format": "prettier --write \"src/**/*.{ts,tsx}\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/**/*.{ts,tsx}\" \"docs/*/**.md\"",
@@ -98,7 +98,8 @@
     "dist/**/*.js.map",
     "dist/**/*.d.ts",
     "dist/**/package.json",
-    "src/"
+    "src/",
+    "query"
   ],
   "dependencies": {
     "immer": "^9.0.1",
