--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
   "license": "MIT",
   "devDependencies": {
     "@microsoft/api-extractor": "^7.13.2",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/react-hooks": "^5.1.2",
+    "@testing-library/user-event": "^13.1.5",
     "@types/convert-source-map": "^1.5.1",
     "@types/jest": "^24.0.11",
     "@types/json-stringify-safe": "^5.0.0",
@@ -64,6 +67,7 @@
     "axios": "^0.19.2",
     "console-testing-library": "^0.3.1",
     "convert-source-map": "^1.7.0",
+    "cross-fetch": "^3.1.4",
     "esbuild": "0.8.57",
     "eslint-config-react-app": "^5.0.1",
     "fs-extra": "^9.1.0",
@@ -71,8 +75,12 @@
     "json-stringify-safe": "^5.0.1",
     "magic-string": "^0.25.7",
     "merge-source-map": "^1.1.0",
+    "msw": "^0.28.2",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.2.1",
-    "react": "^16.8.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.3",
     "rollup-plugin-strip-code": "^0.2.6",
     "source-map": "^0.7.3",
     "terser": "^5.6.1",
