Update test configuration to run RTKQ tests

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -31,7 +31,9 @@
     "emitDeclarationOnly": true,
     "baseUrl": ".",
     "paths": {
-      "@reduxjs/toolkit": ["./src/index.ts"]
+      "@reduxjs/toolkit": ["src/index.ts"],
+      "@reduxjs/toolkit/query": ["src/query/index.ts"],
+      "@reduxjs/toolkit/query/react": ["src/query/react.ts"],
     }
   }
 }
