--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "format:check": "prettier --list-different \"src/**/*.{ts,tsx}\" \"docs/*/**.md\"",
     "lint": "tsdx lint src",
     "prepare": "npm run lint && npm run format:check && npm test && npm run type-tests && npm run build-ci",
-    "test": "tsdx test",
+    "test": "tsdx test --runInBand",
     "type-tests": "cd type-tests/files && tsc"
   },
   "files": [
