--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "main": "dist/index.js",
   "module": "dist/redux-toolkit.esm.js",
   "unpkg": "dist/redux-toolkit.umd.min.js",
-  "types": "dist/index.d.ts",  
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -42,8 +42,12 @@
   },
   "typesVersions": {
     "*": {
-      "query": ["./query/index.d.ts"],
-      "query/react": ["./query/react.d.ts"]
+      "query": [
+        "./query/index.d.ts"
+      ],
+      "query/react": [
+        "./query/react.d.ts"
+      ]
     }
   },
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
