--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -33,7 +33,7 @@
     "paths": {
       "@reduxjs/toolkit": ["src/index.ts"],
       "@reduxjs/toolkit/query": ["src/query/index.ts"],
-      "@reduxjs/toolkit/query/react": ["src/query/react.ts"],
+      "@reduxjs/toolkit/query/react": ["src/query/react/index.ts"],
     }
   }
 }
