--- a/query/react/package.json
+++ b/query/react/package.json
@@ -5,13 +5,13 @@
   "main": "../../dist/query/react/index.js",
   "module": "../../dist/query/react/rtk-query-react.esm.js",
   "unpkg": "../../dist/query/react/rtk-query-react.umd.min.js",
-  "types": "../../dist/query/react/index.d.ts",
+  "types": "../../dist/query/react/indexTs40.d.ts",
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
   "license": "MIT",
   "typesVersions": {
-    "<4.1": {
-      "index.d.ts": [ 
-        "../../dist/query/react/indexTs40.d.ts"
+    ">=4.1": {
+      "*": [ 
+        "dist/query/react/index.d.ts"
       ]
     }
   }
