--- a/query/react/package.json
+++ b/query/react/package.json
@@ -5,13 +5,18 @@
   "main": "../../dist/query/react/index.js",
   "module": "../../dist/query/react/rtk-query-react.esm.js",
   "unpkg": "../../dist/query/react/rtk-query-react.umd.min.js",
-  "types": "../../dist/query/react/indexTs40.d.ts",
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
   "license": "MIT",
+  "types": "./rtk-query-react.d.ts",
   "typesVersions": {
     ">=4.1": {
-      "*": [ 
-        "dist/query/react/index.d.ts"
+      "rtk-query-react.d.ts": [
+        "../../dist/query/react/index.d.ts"
+      ]
+    },
+    "<4.1": {
+      "rtk-query-react.d.ts": [
+        "../../dist/query/react/indexTs40.d.ts"
       ]
     }
   }
