--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "console-testing-library": "^0.3.1",
     "convert-source-map": "^1.7.0",
     "cross-fetch": "^3.1.4",
-    "esbuild": "0.8.57",
+    "esbuild": "^0.11.13",
     "eslint-config-react-app": "^5.0.1",
     "fs-extra": "^9.1.0",
     "invariant": "^2.2.4",
