ApiProvider, Conditional Fetching, Optimistic Updates

--- a/src/query/examples/api-provider/package.json
+++ b/src/query/examples/api-provider/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "concepts-queries-deduping-caching",
+  "name": "rtk-query-apiprovider",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
