Install cache plugin in website

--- a/website/package.json
+++ b/website/package.json
@@ -27,5 +27,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "netlify-plugin-cache": "^1.0.3"
   }
 }
