Try bumping available memory

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,7 @@
 
 [build.environment]
 NODE_VERSION = "14"
+NODE_OPTIONS = "--max_old_space_size=4096"
 
 [[plugins]]
   package = "netlify-plugin-cache"
